Removed EnableFlippingForRTLUI from SetUpForInOutAnimation.

SetupForInOutAnimation (in IconLabelBubbleView) sets
'EnableFlippingFoRTLUI' to true in all cases. Since only
ContentSettingImageView needs it set to true, removed it from the
method and it is now set separately in that subclass

Bug: 881798
Change-Id: I2d570cc84d9d4f9443b39ffa51d943d938624dbe
Reviewed-on: https://chromium-review.googlesource.com/1250055
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Carlos IL <carlosil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595528}