chrome/browser/ui/views/location_bar/content_setting_image_view.cc
@@ -34,6 +34,7 @@ ContentSettingImageView::ContentSettingImageView(
       bubble_view_(nullptr) {
   DCHECK(delegate_);
   SetUpForInOutAnimation();
+  image()->EnableCanvasFlippingForRTLUI(true);
 }
 
 ContentSettingImageView::~ContentSettingImageView() {
